# oura

./: .cursorrules  .gitignore  README.md  pyproject.toml
docs/: instructions.md  oura-ring-docs.md
src/api/: __init__.py  test.ipynb
src/models/: __init__.py  activity.py  base.py  daily_activity.py  daily_readiness.py  daily_sleep.py  database.py  personal_info.py  readiness.py  ring_configuration.py  sleep.py  spo2.py  stress.py  workout.py
src/scripts/: copy_oura_to_db.py  initialize_db.py
tests/: conftest.py
tests/models/: test_workout.py
