[tool.poetry]
name = "oura"
version = "0.1.0"
description = ""
authors = ["Matt Herich <mjherich@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
oura-ring = "^0.3.0"
peewee = "^3.17.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
ruff = "^0.1.6"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
